force-app/main/default/objects/Gong__Call_Invitee__c/Gong__Call_Invitee__c.object-meta.xml
<CustomObject>
    <label>Invitee</label>
    <nameField>
        <label>Invitee Email</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invitees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>