force-app/main/default/objects/Gong__Call_Invitee__c/fields/Gong__Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Gong__Contact_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invitees</relationshipLabel>
    <relationshipName>Call_Invitees</relationshipName>
    <type>Lookup</type>
</CustomField>