force-app/main/default/objects/Gong__Call_Invitee__c/fields/Gong__Gong_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Gong__Gong_Interaction__c</fullName>
    <label>Gong Conversation</label>
    <referenceTo>Gong__Gong_Call__c</referenceTo>
    <relationshipLabel>Invitees</relationshipLabel>
    <relationshipName>Call_Invitees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>