force-app/main/default/objects/Gong__Call_Invitee__c/fields/Gong__Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Gong__Lead_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Id</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Invitees</relationshipLabel>
    <relationshipName>Call_Invitees</relationshipName>
    <type>Lookup</type>
</CustomField>